[package]
name = "cpi-pda-demo"
version = "0.1.0"
description = "cpi pda demo"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_pda_demo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }